--- a/miete.html
+++ b/miete.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <meta name="description" content="This is the AMP Boilerplate.">
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
-    <link rel="preload" href="hero-img.jpg" as="image">
+    <link rel="preload" href="./public/images/topimage.jpg" as="image">
     <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <!-- Import other AMP Extensions here -->
@@ -20,12 +20,6 @@
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-<h1>Hello World</h1>
-<amp-img src="hero-img.jpg"
-         width="1280"
-         height="720"
-         layout="responsive"
-         alt="This is a hero image which should be loaded as fast as possible">
-</amp-img>
+    <amp-img src="./public/images/topimage.jpg" alt="TopBanner" height="334" width="1188" layout="responsive"></amp-img>
 </body>
 </html>
