--- a/miete.html
+++ b/miete.html
@@ -21,5 +21,6 @@
 </head>
 <body>
     <amp-img src="./public/images/topimage.jpg" alt="TopBanner" height="334" width="1188" layout="responsive"></amp-img>
+    <amp-img src="./public/images/banner_1_image" alt=""
 </body>
 </html>
