--- a/miete.html
+++ b/miete.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <meta name="description" content="This is the AMP Boilerplate.">
-    
+
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <link rel="preload" href="./public/images/topimage.jpg" as="image">
     <link rel="preload" href="./public/images/topimage_mobile.jpg" as="image">
@@ -22,42 +22,168 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <!-- Import other AMP Extensions here -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <style amp-custom>
-        /* Add your styles here */
-    </style>
-    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s  normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
+    <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+    <script async custom-element="amp-list" src="https://cdn.ampproject.org/v0/amp-list-0.1.js"></script>
+    <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
+    <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="./public/miete.css" media="screen" />
+    <style amp-boilerplate>body {
+        -webkit-animation: -amp-start 8s steps(1, end) 0s normal both;
+        -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        animation: -amp-start 8s steps(1, end) 0s 1 normal both
+    }
+
+    @-webkit-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-moz-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-ms-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @-o-keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }
+
+    @keyframes -amp-start {
+        from {
+            visibility: hidden
+        }
+        to {
+            visibility: visible
+        }
+    }</style>
+    <noscript>
+        <style amp-boilerplate>body {
+            -webkit-animation: none;
+            -moz-animation: none;
+            -ms-animation: none;
+            animation: none
+        }</style>
+    </noscript>
+
+    <link rel="stylesheet" type="text/css" href="./public/miete.css" media="screen"/>
     <link rel="canonical" href=".">
     <title>MM Miete</title>
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-    <div class="mms-container">
-        <div class="mms-top-banner">
-            <amp-img media="(min-width: 480px)" src="./public/images/topimage.jpg" alt="TopBanner" height="334" width="1188" layout="responsive"></amp-img>
-            <amp-img media="(max-width: 479px)" src="./public/images/topimage_mobile.jpg" alt="TopBannerMobile" height="296" width="640" layout="responsive" ></amp-img>
+<div class="mms-container">
+    <div class="mms-top-banner">
+        <amp-img media="(min-width: 480px)" src="./public/images/topimage.jpg" alt="TopBanner" height="334" width="1188"
+                 layout="responsive"></amp-img>
+        <amp-img media="(max-width: 479px)" src="./public/images/topimage_mobile.jpg" alt="TopBannerMobile" height="296"
+                 width="640" layout="responsive"></amp-img>
         </di>
         <div class="mms-banner-one">
-            <amp-img media="(min-width: 480px)" src="./public/images/banner_1.jpg" alt="Banner1" height="130" width="1188" layout="responsive"></amp-img>
-            <amp-img media="(max-width: 479px)" src="./public/images/banner_1_mobile.jpeg" alt="Banner1Mobile" height="215" width="640" layout="responsive" ></amp-img>
+            <amp-img media="(min-width: 480px)" src="./public/images/banner_1.jpg" alt="Banner1" height="130"
+                     width="1188" layout="responsive"></amp-img>
+            <amp-img media="(max-width: 479px)" src="./public/images/banner_1_mobile.jpeg" alt="Banner1Mobile"
+                     height="215" width="640" layout="responsive"></amp-img>
         </div>
-        <h1 class="mms-text-one">In 5 Schritten zum Miet-Produkt - so einfach geht's</h1>
-        <div class="mms-steps">
-            <amp-img media="(min-width: 480px)" src="./public/images/bottom_steps.png" alt="Banner1" height="373" width="1188" layout="responsive"></amp-img>
-        </div>
+        <section class="section-steps">
+            <h1 class="mms-text-one">In 5 Schritten zum Miet-Produkt - so einfach geht's</h1>
+            <div class="mms-steps">
+                <amp-img media="(min-width: 480px)" src="./public/images/bottom_steps.png" alt="Banner1" height="373"
+                         width="1188" layout="responsive"></amp-img>
+            </div>
+        </section>
         <div>
             <div>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection1.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection2.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection3.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection1.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection2.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection3.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
             </div>
             <div>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection4.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection5.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection6.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection4.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection5.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
+                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection6.jpg" alt="Banner1" height="210"
+                         width="386"></amp-img>
             </div>
         </div>
     </div>
+    <h2 class="faq-header">FAQ</h2>
+    <amp-accordion animate>
+        <section>
+            <h4>Wann wird die erste Miete fällig?</h4>
+            <p>Grover berechnet die erste Miete sofort nach dem Zustandekommen des
+                Vertrages. Der Mietzeitraum beginnt aber erst mit dem Lieferdatum des Produktes.</p>
+        </section>
+        <section>
+            <h4>Kann ein Mietvertrag abgelehnt werden?</h4>
+            <p>Ja. Grover prüft die Mietanfragen auf verschiedenste Weise. Wird hier ein
+                Kriterium negativ bewertet, wird die Mietanfrage abgelehnt. Bei Fragen wenden Sie sich bitte direkt an
+                <a href="mailto:grover@getgrover.com">grover@getgrover.com</a>
+            </p>
+        </section>
+
+        <section>
+            <h4>In welchem Zustand befinden sich die Produkte?</h4>
+            <p>Jedes Produkt ist neu oder so gut wie neu. Grover reinigt sie bis ins kleinste
+                Detail und verpackt alles so, als wären sie nie aus ihrer Box genommen worden. Indem mehrere Nutzer
+                dasselbe Gerät mieten, werden Ressourcen eingespart und die umweltfreundliche Kreislaufwirtschaft
+                gefördert.</p>
+        </section>
+        <section>
+            <h4>Woher weiß ich, ob ein Produkt bei Media Markt gemietet werden kann?</h4>
+            <p>Alle Produkte, die mit „Miet mich“ gekennzeichnet sind und bei denen sich der
+                „Mieten mit Grover“-Button unterhalb des Kaufpreises befindet, können gemietet werden.</p>
+        </section>
+        <section>
+            <h4>Kann es sein, dass ein Mietprodukt vergriffen ist?</h4>
+            <p>Wenn die Anfrage unser Angebot kurzfristig übersteigt, kann das passieren.
+                Bitte schauen Sie dann ein paar Tage später nochmal vorbei.</p>
+        </section>
+        <section>
+            <h4>Muss ich das Paket persönlich entgegennehmen?</h4>
+            <p>Ja, damit Ihre Bestellung ohne Umwege zu Ihnen kommt, übergibt Ihnen DHL das
+                Paket nur persönlich gegen Unterschrift und Vorlage Ihres Personalausweises oder Passes.</p>
+        </section>
+        <section>
+            <h4>Kann ich auch in einem MediaMarkt direkt mieten?</h4>
+            <p>Ja, in allen Märkten können Sie eine Vielzahl von Produkten mit einem
+                Mitarbeiter mieten und sofort mit nach Hause nehmen.</p>
+        </section>
+        <section>
+            <h3>Kommen Sie vorbei:</h3>
+            <p>Finden Sie den nächsten Markt <span class="breakpoint bp-l bp-m">in Ihrer Nähe</span><a
+                    href="//www.mediamarkt.de/de/marketselection.html" class="button background-type-2 gray"
+                    style="margin-right:10px"><span>Zu allen Märkten</span></a>
+            </p>
+        </section>
+    </amp-accordion>
+</div>
+
 </body>
 </html>
