--- a/miete.html
+++ b/miete.html
@@ -46,17 +46,52 @@
         <div class="mms-steps">
             <amp-img media="(min-width: 480px)" src="./public/images/bottom_steps.png" alt="Banner1" height="373" width="1188" layout="responsive"></amp-img>
         </div>
+        <div class="section-container">
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection1.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection2.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection3.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection4.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection5.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+            <span class="section-item">
+                <div class="section-item-image">
+                    <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection6.jpg" alt="Banner1" height="210" width="386"></amp-img>
+                </div>
+                <div class="section-item-text"><h2>Hello</h2></div>
+            </span>
+        </div>
         <div>
-            <div>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection1.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection2.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection3.jpg" alt="Banner1" height="210" width="386"></amp-img>
-            </div>
-            <div>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection4.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection5.jpg" alt="Banner1" height="210" width="386"></amp-img>
-                <amp-img media="(min-width: 480px)" src="./public/images/bottomsection6.jpg" alt="Banner1" height="210" width="386"></amp-img>
-            </div>
+                <h2>Miet mich! mit MediaMarkt und Grover: So einfach kann es sein</h2>
+                Viele Produkte bei Media Markt können mit unserem Kooperationspartner Grover zu flexiblen Laufzeiten gemietet werden.
+                Sie haben die Wahl zwischen Mindestlaufzeiten von 1, 3, 6 oder 12 Monaten. Je länger Sie mieten, desto günstiger wird der monatliche Mietpreis.
+                Nach Ende der Laufzeit können Sie zum gleichen Preis weitermieten oder monatlich kündigen, indem Sie das Produkt kostenlos an Grover zurücksenden.
+                Drei Monate nach Erreichen des ursprünglichen UVP (Unverbindlicher Verkaufspreis) endet die Miete automatisch und das Produkt gehört Ihnen.
+                Falls Sie sich vor Mietende für den Kauf entscheiden, werden 30 % der geleisteten Mietzahlungen auf den ursprünglichen UVP angerechnet.
+                Im Schadenfall teilen sich Grover und Mieter die Reparaturkosten. Normale Gebrauchsspuren zählen natürlich nicht als Schaden.
         </div>
     </div>
 </body>
