--- a/miete.html
+++ b/miete.html
@@ -108,42 +108,49 @@
                      height="215" width="640" layout="responsive"></amp-img>
         </div>
         <div class="section-container">
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=Foto%20%26%20Drohnen%C2%A7MediaDEdec464020&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&outlet=466&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection1.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
-            </span>
+                <div class="section-item-text"><h2>Kamera & Action</h2></div>
+            </span></a>
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=Smartphone%20%26%20Tarife%C2%A7MediaDEdec464026&filterCategoriesROOT%2FSmartphone%20%26%20Tarife%C2%A7MediaDEdec464026=Wearables%C2%A7MediaDEdec522530&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection2.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
+                <div class="section-item-text"><h2>Gadget & Wearables</h2></div>
             </span>
+            </a>
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=Computer%20%26%20B%C3%BCro%C2%A7MediaDEdec462723&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection3.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
-            </span>
+                <div class="section-item-text"><h2>Notebooks & Tablets:</h2></div>
+            </span></a>
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=Gaming%20%26%20VR%C2%A7MediaDEdec464513&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection4.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
-            </span>
+                <div class="section-item-text"><h2>VR & Gaming</h2></div>
+            </span></a>
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=TV%20%26%20Audio%C2%A7MediaDEdec460665&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection5.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
-            </span>
+                <div class="section-item-text"><h2>TV & Sound</h2></div>
+            </span></a>
+            <a href="https://www.mediamarkt.de/de/search.html?query=MietMich_Produkte&channel=mmdede&filterCategoriesROOT=Smartphone%20%26%20Tarife%C2%A7MediaDEdec464026&filterCategoriesROOT%2FSmartphone%20%26%20Tarife%C2%A7MediaDEdec464026=Smartphones%20%26%20Handys%C2%A7MediaDEdec464027&filteravailability=1&filtercollection=!wls&format=JSON&omitContextName=true&searchProfile=onlineshop&settings=mmdede">
             <span class="section-item">
                 <div class="section-item-image">
                     <amp-img class="section-amp-image" media="(min-width: 480px)" src="./public/images/bottomsection6.jpg" alt="Banner1" height="210" width="386"></amp-img>
                 </div>
-                <div class="section-item-text"><h2>Hello</h2></div>
-            </span>
+                <div class="section-item-text"><h2>Smartphones</h2></div>
+            </span></a>
         </div>
     </div>
     <h2 class="faq-header">FAQ</h2>
@@ -190,9 +197,8 @@
         </section>
         <section>
             <h3>Kommen Sie vorbei:</h3>
-            <p>Finden Sie den nächsten Markt <span class="breakpoint bp-l bp-m">in Ihrer Nähe</span><a
-                    href="//www.mediamarkt.de/de/marketselection.html" class="button background-type-2 gray"
-                    style="margin-right:10px"><span>Zu allen Märkten</span></h2>
+            <p>Finden Sie den nächsten Markt in Ihrer Nähe:
+                <a href="//www.mediamarkt.de/de/marketselection.html"><span>Zu allen Märkten</span></a>
             </p>
         </section>
     </amp-accordion>
